--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Moon phase",
   "main": "main.js",
   "dependencies": {
+    "express": "^4.17.3",
     "inquirer": "^8.2.0",
+    "jquery": "^3.6.0",
     "requirejs": "^2.3.6",
     "three": "^0.124.0"
   },
